<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/foxy"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="20dp"
        app:srcCompat="@drawable/foxy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/introduce_web_one" />

    <EditText
        android:id="@+id/webOneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/introduce_urlOne"
        android:inputType="text" />

    <Button
        android:id="@+id/webOneBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/go_to_web_one"
        android:textColor="@color/white"
        app:backgroundTint="#F8A053"
        app:cornerRadius="32dp"
        app:elevation="8dp"
        app:strokeColor="#14404040"
        app:strokeWidth="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/introduce_web_two" />

    <EditText
        android:id="@+id/webTwoET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/introduce_urlTwo"
        android:inputType="text" />

    <Button
        android:id="@+id/webTwoBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/go_to_web_two"
        android:textColor="@color/white"
        app:backgroundTint="#F8A053"
        app:cornerRadius="32dp"
        app:elevation="8dp"
        app:strokeColor="#14404040"
        app:strokeWidth="2dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/goSeeYourWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_horizontal"
        android:text="@string/go_see_your_web"
        android:textColor="@color/Light_Orange"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>